body:overflow - bug

--- a/main.css
+++ b/main.css
@@ -18,6 +18,7 @@ body {
   background: #fafafa;
   color: #8e8e8e;
   font-size: 14px;
+  overflow: hidden;
 }
 
 button {
